# rust-apps

./: README.md
whipsink/: Cargo.toml
whipsink/src/: main.rs
whipsrc/: Cargo.toml
whipsrc/src/: main.rs
