[package]
name = "whipsrc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
parking_lot = "0.10.0"